--- a/gdx-assistant-desktop/build.gradle
+++ b/gdx-assistant-desktop/build.gradle
@@ -2,18 +2,19 @@ apply plugin: "java-library"
 
 sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
-sourceSets.main.resources.srcDirs = ["../assets"]
+sourceSets.main.resources.srcDirs = ["assets"]
 
 project.ext.mainClassName = "com.gempukku.gdx.assistant.DesktopLauncher"
-project.ext.assetsDir = new File("../assets")
+project.ext.assetsDir = new File("assets")
 
 import org.gradle.internal.os.OperatingSystem
 
 dependencies {
-    implementation project(":core")
     implementation project(":gdx-plugins")
     implementation project(":gdx-assistant-plugin")
 
+    api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.kotcrab.vis:vis-ui:1.4.11"
     api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 }
