Refactored the menu creation for plugins to be cleaner

--- a/gdx-assistant-desktop/build.gradle
+++ b/gdx-assistant-desktop/build.gradle
@@ -70,7 +70,6 @@ task dist(type: Jar) {
     with jar
 }
 
-
 dist.dependsOn classes
 
-eclipse.project.name = appName + "-desktop"
+eclipse.project.name = "gdx-assistant-desktop"
