gdx-assistant with new tabs and handling of dirty and saves

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,6 @@ org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
 
 gdxAssistantVersion=0.0.1
+visUiVersion=1.5.1
+gdxGempLibVersion=8ec0038
+
