--- a/gdx-assistant-desktop/build.gradle
+++ b/gdx-assistant-desktop/build.gradle
@@ -14,10 +14,11 @@ dependencies {
     implementation project(":gdx-assistant-plugin")
 
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.github.MarcinSc.gdx-gemp-lib:gdx-gemp-ui:$gdxGempLibVersion"
+    api "com.kotcrab.vis:vis-ui:$visUiVersion"
+
     api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-
-    api "com.kotcrab.vis:vis-ui:1.4.11"
 }
 
 def assistantPlugins = [
