--- a/gdx-assistant-desktop/build.gradle
+++ b/gdx-assistant-desktop/build.gradle
@@ -10,15 +10,15 @@ project.ext.assetsDir = new File("assets")
 import org.gradle.internal.os.OperatingSystem
 
 dependencies {
-    implementation project(":gdx-plugins")
-    implementation project(":gdx-assistant-plugin")
+    api project(":gdx-plugins")
+    api project(":gdx-assistant-plugin")
 
-    api "com.badlogicgames.gdx:gdx:$gdxVersion"
-    api "com.github.MarcinSc.gdx-gemp-lib:gdx-gemp-ui:$gdxGempLibVersion"
-    api "com.kotcrab.vis:vis-ui:$visUiVersion"
+    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+    implementation "com.github.MarcinSc.gdx-gemp-lib:gdx-gemp-ui:$gdxGempLibVersion"
+    implementation "com.kotcrab.vis:vis-ui:$visUiVersion"
 
-    api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
+    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 }
 
 def assistantPlugins = [
