--- a/gdx-plugins/build.gradle
+++ b/gdx-plugins/build.gradle
@@ -6,6 +6,7 @@ sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 dependencies {
+    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
 }
 
 eclipse.project.name = "gdx-plugins"
