--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,9 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
 
-gdxAssistantVersion=0.0.1
+gdxVersion=1.11.0
+gdxGraphVersion=a9f5729
+gdxAssistantVersion=1.0.0
 visUiVersion=1.5.1
 gdxGempLibVersion=6864ef2
 
