--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=false
 
 gdxVersion=1.11.0
-gdxGraphVersion=a9f5729
+gdxGraphVersion=1.0.0
 gdxAssistantVersion=1.0.0
 visUiVersion=1.5.1
 gdxGempLibVersion=6864ef2
