Support for menu shortcuts

--- a/gdx-assistant-plugin/build.gradle
+++ b/gdx-assistant-plugin/build.gradle
@@ -5,6 +5,7 @@ sourceCompatibility = 1.8
 dependencies {
     api project(":gdx-plugins")
 
+    api "com.github.MarcinSc.gdx-gemp-lib:gdx-gemp-ui:$gdxGempLibVersion"
     implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
 }
 
