New project requires a file from the start

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 allprojects {
     apply plugin: "eclipse"
+    apply plugin: "maven-publish"
 
     version = "$gdxAssistantVersion"
     ext {
