Fixed issue with finding files

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.configureondemand=false
 gdxAssistantVersion=1.1.0
 
 gdxVersion=1.11.0
-visUiVersion=1.5.1
-gdxGraphVersion=1.0.0
+
+gdxGraphVersion=8b859c3
 gdxGempLibVersion=949af4e
+
+visUiVersion=1.5.1
