Uses gdx-graph plugin version 1.1.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ gdxAssistantVersion=1.1.0
 
 gdxVersion=1.11.0
 
-gdxGraphVersion=8b859c3
+gdxGraphVersion=1.1.0
 gdxGempLibVersion=94b54db
 
 visUiVersion=1.5.1
