--- a/build.gradle
+++ b/build.gradle
@@ -41,13 +41,13 @@ configure(subprojects) {
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
     task javadocJar(type: Jar) {
-        classifier 'javadoc'
+        archiveClassifier = "javadoc"
         from javadoc
     }
 
     task sourcesJar(type: Jar) {
-        classifier 'sources'
-        from sourceSets.main.allSource
+        archiveClassifier = "sources"
+        from sourceSets.main.allJava
     }
 
     artifacts {
