--- a/build.gradle
+++ b/build.gradle
@@ -35,22 +35,16 @@ allprojects {
 }
 
 configure(subprojects) {
-    apply plugin: 'java-library'
+    apply plugin: "java"
+    apply plugin: "maven-publish"
+
+    sourceCompatibility = 1.8
 
     sourceSets.main.java.srcDirs = ["src/"]
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-    task javadocJar(type: Jar) {
-        archiveClassifier = "javadoc"
-        from javadoc
-    }
-
-    task sourcesJar(type: Jar) {
-        archiveClassifier = "sources"
-        from sourceSets.main.allJava
-    }
-
-    artifacts {
-        archives javadocJar, sourcesJar
+    java {
+        withSourcesJar()
+        withJavadocJar()
     }
 }
