Assistant now exposes more information about the project, and has a set project file name it uses in a folder.

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ configure(subprojects) {
     sourceCompatibility = 1.8
 
     sourceSets.main.java.srcDirs = ["src/"]
+    sourceSets.main.resources.srcDirs = ["resources/"]
+    sourceSets.test.java.srcDirs = ["test/"]
+    sourceSets.test.resources.srcDirs = ["test-resources/"]
+
     [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
     java {
