--- a/gdx-assistant-desktop/build.gradle
+++ b/gdx-assistant-desktop/build.gradle
@@ -73,19 +73,21 @@ task dist(type: Jar) {
 dist.dependsOn classes
 
 tasks.register('texturePacking') {
-    if (project.ext.has('texturePacker')) {
-        TexturePacker.Settings settings = new TexturePacker.Settings()
-        settings.grid = false
-        settings.maxWidth = 2048
-        settings.maxHeight = 2048
-        settings.stripWhitespaceX = true
-        settings.stripWhitespaceY = true
-        settings.filterMin = Texture.TextureFilter.Nearest
-        settings.filterMag = Texture.TextureFilter.Nearest
+    doLast {
+        if (project.ext.has('texturePacker')) {
+            TexturePacker.Settings settings = new TexturePacker.Settings()
+            settings.grid = false
+            settings.maxWidth = 2048
+            settings.maxHeight = 2048
+            settings.stripWhitespaceX = true
+            settings.stripWhitespaceY = true
+            settings.filterMin = Texture.TextureFilter.Nearest
+            settings.filterMag = Texture.TextureFilter.Nearest
 
-        for (int i = 0; i < texturePacker.size(); i += 3) {
-            println("Calling TexturePacker: " + texturePacker[i + 2])
-            TexturePacker.process(settings, texturePacker[i + 0], texturePacker[i + 1], texturePacker[i + 2])
+            for (int i = 0; i < texturePacker.size(); i += 3) {
+                println("Calling TexturePacker: " + texturePacker[i + 2])
+                TexturePacker.process(settings, texturePacker[i + 0], texturePacker[i + 1], texturePacker[i + 2])
+            }
         }
     }
 }
